[package]
name = "ccxt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.57"
base64 = "0.20.0"
chrono = "0.4.22"
hex = "0.4.3"
hmac = "0.12.1"
md-5 = "0.10.5"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"
regex = "1.6.0"
reqwest = "0.11.11"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.83", features = ["unbounded_depth"] }
sha2 = "0.10.6"
sha3 = "0.10.6"
tokio = { version = "1.20.1", features = ["full"] }
urlencoding = "2.1.0"

[lib]
name = "ccxt"
path = "src/lib.rs"

[[bin]]
name = "ccxt-rs-test"
path = "src/bin/test.rs"

[profile.release]
debug = true
